feat: registra endpoint de progresso de estrelas nas rotas e swagger
